[package]
name = "nostr-nostd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = "0.2.0"
heapless = { version = "0.7.14", default-features = false }
secp256k1 = {version = "0.27.0", default-features = false, features = ["serde", "rand", "recovery", "lowmemory"] }
sha2 = { version = "0.10.7", default-features = false }